Added Links between shopping_cart and landing.html.
Got Rid of Javascript hello world message.

--- a/TroyGroup/landing.html
+++ b/TroyGroup/landing.html
@@ -16,14 +16,16 @@
 			<ul>
 				<div class="links"> 
 					<!-- Links still need valid url -->
+					<li><a href="landing.html">Home</a></li>
 					<li><a href="#">Order Online</a></li>
 					<li><a href="#">Location & Hours</a></li>
 					<li><a href="#">Catering</a></li>
 					<li><a href="#">About Us</a></li>
+					<li><a href="shopping_cart.html">Your Cart</a></li>
 				</div>
 			</ul>
 		</nav>
 
-		<h1>Hello World!</h1>
+		<h1>Thank you for choosing to eat with Troy Cafe.</h1>
 	</body>
 </html>
