--- a/TroyGroup/landing.html
+++ b/TroyGroup/landing.html
@@ -1,29 +1,57 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Trojan Cafe</title>
-		<!-- Custom Stylesheer -->
-		<link rel="stylesheet" type="text/css" href="assets/main.css">
-		<!-- Google Fonts -->
-		<link href="https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet">	
-		<!-- JS File -->
-	<script type="text/javascript" src="assets/landing.js"></script>
-	</head>
-	<body>
-		<nav class="nav">
-			<div class="logo"><img src="assets/photos/logo_transparent.png"/></div>
-			<ul>
-				<div class="links"> 
-					<!-- Links still need valid url -->
-					<li><a href="#">Order Online</a></li>
-					<li><a href="#">Location & Hours</a></li>
-					<li><a href="#">Catering</a></li>
-					<li><a href="#">About Us</a></li>
-				</div>
-			</ul>
-		</nav>
-
-		<h1>Hello World!</h1>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Trojan Cafe</title>
+    <link rel="stylesheet" type="text/css" href="home.css">
+    <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="home.js"></script>
+  </head>
+  <body>
+    <nav class="nav">
+      <div class="logo"><img src="assets/photos/logo_transparent.png"/></div>
+      <ul>
+        <div class="links"> 
+          <!-- Links still need valid url -->
+          <li><a href="#">Order Online</a></li>
+          <li><a href="#">Location & Hours</a></li>
+          <li><a href="#">Catering</a></li>
+          <li><a href="#">About Us</a></li>
+        </div>
+      </ul>
+    </nav>
+    <section class="head">
+      <div class="featured-image">
+      </div>
+    </section>
+    <section class="hero">
+      <h1>Troy Cafe</h1>
+      <h4>Coffee - Breakfast - Lunch</h4>
+      <div class="featured-pages">
+        <div class="menu">
+          <h3>See Our Menu</h3>
+          <p><button class="btn">Click Here</button></p>
+          <img class="image" src="assets/photos/pancakes.jpg"/>
+        </div>
+        <div class="visit">
+          <img class="image" src="assets/photos/espresso.jpg"/>
+          <h3>Order</h3>
+          <p><button class="btn">Order Now</button></p>
+        </div>
+      </div>
+    </section>
+    <section class="visit-us">
+      <h4>Visit Us</h4>
+      <p>600 University Ave, Troy, AL 36082</p>
+      <p>555-555-5555</p>
+      <img src="assets/photos/gmaps.png"/>
+    </section>
+    <section class="footer">
+      <div class="content">
+        <h2>Excepteur occaeuiecat cupidatat.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut ero labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      </div>
+    </section>
+  </body>
 </html>
